# fast-api-intro-project

./: README.md  main.py  pyproject.toml
fast_api_intro_project/schemas/: Item.py  image.py  offer.py  user.py
