[tool.poetry]
name = "fast-api-intro-project"
version = "0.1.0"
description = ""
authors = ["Chaa Loftin <chaamail@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.109.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
